fix: give dots higher visibility on light colored bgs

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@
 
 /* stylelint-disable */
 
-@use "./../node_modules/@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 
 :host {
   --border-size: 6px; /* Tokenize */
@@ -107,6 +107,7 @@
   border-radius: 50%;
   border: none;
   background-color: var(--ds-advanced-color-button-primary-background-inactive, v.$ds-advanced-color-button-primary-background-inactive);
+  mix-blend-mode: multiply;
   position: relative;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
@@ -146,6 +147,7 @@
   border-radius: 1.8rem;
   border: none;
   background-color: var(--ds-advanced-color-button-primary-background-inactive, v.$ds-advanced-color-button-primary-background-inactive);
+  mix-blend-mode: multiply;
   position: relative;
   overflow: hidden;
   cursor: pointer;
